# baby-mimalloc

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
src/: constants.rs  deferred_free.rs  heap.rs  lib.rs  list.rs  mmap.rs  mutex.rs  page.rs  segment.rs  utils.rs
tests/: deferred_free.rs  global_alloc.rs  test.rs
